# miniGwent

src/HttpServer/: HttpServer.cabal  server.hs
src/HttpServer/.cabal-sandbox/: add-source-timestamps
src/HttpServer/.cabal-sandbox/doc/x86_64-windows-ghc-8.0.2/direct-sqlite-2.3.20/: LICENSE
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/aeson-1.2.1.0-KfnDo9ozgvKXzVpZc8SVr/Data/: Aeson.dyn_hi  Aeson.hi
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/aeson-1.2.1.0-KfnDo9ozgvKXzVpZc8SVr/Data/Aeson/: Encode.dyn_hi  Encode.hi  Encoding.dyn_hi  Encoding.hi  (+10 more)
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/attoparsec-0.13.2.0-3Bzlg0eDzsnDsvRnPFTRPq/Data/: Attoparsec.dyn_hi  Attoparsec.hi
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/auto-update-0.1.4-GZpbAgyETDJHs1aXX3MWAW/Control/: AutoUpdate.dyn_hi  AutoUpdate.hi  Debounce.dyn_hi  Debounce.hi  Reaper.dyn_hi  Reaper.hi
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/base-compat-0.9.3-7gxrulAnYCf9OVK5Ok3lMW/Foreign/: Compat.dyn_hi  Compat.hi
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/base-compat-0.9.3-7gxrulAnYCf9OVK5Ok3lMW/Numeric/: Compat.dyn_hi  Compat.hi
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/base-compat-0.9.3-7gxrulAnYCf9OVK5Ok3lMW/Prelude/: Compat.dyn_hi  Compat.hi
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/blaze-markup-0.8.0.0-Ix1NkDH0X5EIQ04MHmq5BM/Text/: Blaze.dyn_hi  Blaze.hi
src/HttpServer/.cabal-sandbox/lib/x86_64-linux-ghc-8.2.1/blaze-textual-0.2.1.0-HnhYp15jhWKCGPrIRJ8byR/Blaze/: Text.dyn_hi  Text.hi
(+348 files in other folders)
